Fixed the alignment issue

--- a/public/assets/css/studentformquestionair.css
+++ b/public/assets/css/studentformquestionair.css
@@ -973,7 +973,7 @@ form {
     }
 
     .input-group {
-        width: 100%;
+        width: 90%;
         margin: 0 auto;
     }
 
